# unidex-tactile

./: .gitignore  F_ext问题分析.md  README.md  compute_observations修复总结.md  compute_observations问题分析.md  force_sensor坐标系分析.md  note.txt  reward设计问题分析.md  rigid_body_state坐标系分析.md  setup.py  value_loss.md  value_loss后期振荡原因分析.md  修复总结.md  可达工作空间采样实现方案.md  坐标系分析.md  坐标系转换修复代码.md  坐标系转换错误分析.md  环境创建与坐标系分析.md  追踪问题分析与修复.md
New_urdf/d5_right_hands_tips/: CMakeLists.txt  Fingertip 指尖 15mm PX6AX-GEN3-DP-S2015-Elite PXSR-STDDP03G.stp
New_urdf/d5_right_hands_tips/launch/: display.launch  gazebo.launch
New_urdf/d5_right_hands_tips/meshes/: Thumb_fingertip.STL  pinky_tipmount.STL  ring_fingertip.STL  ring_tipmount.STL
New_urdf/d5_right_hands_tips/urdf/: d5_right_hands_tips.csv  d5_right_hands_tips.urdf
d5_right_hands_tips/: package.xml
d5_right_hands_tips/config/: joint_names_d5_right_hands_tips.yaml
d5_right_hands_tips/meshes/: index_fingertip.STL  index_tipmount.STL  middle_fingertip.STL  middle_tipmount.STL  pinky_fingertip.STL
legged_gym/b2_gym_learn/ppo_cse_pf/: actor_critic.py  on_policy_runner.py  ppo.py  rollout_storage.py
legged_gym/envs/: __init__.py
legged_gym/envs/b2/: b2z1_pos_force_config.py  legged_robot_b2z1_pos_force.py
legged_gym/envs/base/: base_task.py  legged_robot.py  legged_robot_config.py  wuji.py
legged_gym/envs/wuji/: wuji_pos_force_config.py  (+2 more)
legged_gym/scripts/: mytest.py  play_b2z1posforce.py  play_wuji.py  train_b2z1posforce.py  train_wuji.py  visualize.py
legged_gym/utils/: __init__.py  helpers.py  isaacgym_utils.py  task_registry.py
(+1 files in other folders)
